# Signals2Surge

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: inital-proposal.txt
src/synth2surge/: __init__.py  config.py  types.py
src/synth2surge/api/: app.py  routes.py  schemas.py
src/synth2surge/audio/: engine.py  midi.py  renderer.py  standard_probes.py
src/synth2surge/batch/: __init__.py  manifest.py
src/synth2surge/capture/: workflow.py
src/synth2surge/cli/: main.py
src/synth2surge/loss/: __init__.py  clap_features.py  enriched.py  features.py  mr_stft.py
src/synth2surge/ml/: __init__.py  data_generator.py  encoder.py  experience_store.py  hybrid_loss.py  predictor.py  pretrained.py  trainer.py  training_loop.py  triplet_dataset.py  warm_start.py
src/synth2surge/optimizer/: loop.py  strategies.py
src/synth2surge/prior/: generator.py  index.py
src/synth2surge/surge/: factory.py  fxp_export.py  parameter_space.py  patch.py  preset_loader.py
tests/: conftest.py  factories.py
tests/acceptance/: test_quality_metrics.py  test_self_translation.py
tests/e2e/: test_batch_workflow.py  test_cli_workflow.py  test_factory_roundtrip.py  test_full_pipeline.py  test_ml_surge_rendering.py  test_ml_training_loop.py  test_multi_probe_pipeline.py  test_pretrained_workflow.py
tests/integration/: test_audio_engine.py  test_index.py  test_optimizer_loop.py  test_renderer.py
tests/unit/: test_api.py  test_batch_cli.py  test_cli.py  test_data_generator.py  test_encoder.py  test_enriched_loss.py  test_experience_store.py  test_features.py  test_fxp_export.py  test_generator.py  test_manifest.py  test_midi.py  test_mr_stft.py  test_optimizer.py  test_parameter_space.py  test_patch.py  test_predictor.py  test_preset_loader.py  test_pretrained.py  test_standard_probes.py  test_trainer.py  test_warm_start.py
