[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "synth2surge"
version = "0.1.0"
description = "Translate arbitrary VST synth patches into sonically similar Surge XT patches via black-box optimization"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.11"
authors = [
    { name = "Steve Hiehn", email = "stevehiehn@gmail.com" },
]
keywords = ["synthesizer", "surge-xt", "audio", "dsp", "optimization"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Sound Synthesis",
]
dependencies = [
    "pedalboard>=0.9.10",
    "numpy>=1.26,<3",
    "librosa>=0.10.2",
    "soundfile>=0.12",
    "optuna>=4.0",
    "cmaes>=0.11",
    "faiss-cpu>=1.8",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "typer>=0.12",
    "mido>=1.3",
    "rich>=13.0",
    "lxml>=5.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
ml = [
    "torch>=2.1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.5",
]

[project.scripts]
synth2surge = "synth2surge.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/synth2surge"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: Pure unit tests, no external dependencies",
    "integration: Tests requiring multiple components or plugins",
    "acceptance: User story validation tests",
    "e2e: Full pipeline end-to-end tests",
    "requires_surge: Requires Surge XT VST3 to be installed",
    "slow: Tests taking more than 30 seconds",
]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]